# mlir-modifier

./: .gitignore  Makefile  README.md  README_zh.md  RECENT_CHANGES.md  setup.sh  start-backend.sh  start-frontend.sh
.github/workflows/: build-offline-bundle.yml
backend/: pyproject.toml
backend/app/: main.py
backend/app/models/: ir_schema.py
backend/app/routers/: edit.py  model.py  ws.py
backend/app/services/: dialect_registry.py  history.py  ir_manager.py  notifier.py
backend/tests/: conftest.py  test_api.py  test_dialect_registry.py  test_edit_attributes.py  test_edit_create.py  test_edit_delete.py  test_edit_operands.py  test_edit_output.py  test_history.py  test_ir_manager.py  test_ws.py
docs/: custom-dialect-guide.md  setup-guide.md
docs/agents/: README.md
docs/agents/agents/: bug-localizer.md  git-operator.md
docs/agents/commands/: architect.md  backend.md  frontend.md
docs/agents/memory/backend/: MEMORY.md
docs/agents/memory/frontend/: MEMORY.md
docs/agents/memory/plans/: README.md  plan-2026-02-28-delete-node-options.md  (+5 more)
docs/plans/: 2026-02-12-mlir-modifier-design.md  2026-02-13-phase3-editing.md  2026-02-13-phase3-fixes.md
frontend/: package-lock.json  package.json  vite.config.ts
frontend/src/: App.tsx  index.css
frontend/src/components/: ValidationBanner.tsx
frontend/src/hooks/: useKeyboardShortcuts.ts  useValidation.ts
frontend/src/services/: api.ts
frontend/src/types/: ir.ts
scripts/: bundle-offline.sh  diagnose-bundle.sh  import-dialect.sh  setup-agents.sh  sync-agents.sh
tests/: nested.mlir  simple.mlir
(+20 files in other folders)
